--- a/core/src/main/resources/io/doov/core/dsl/meta/i18n/DefaultResourceBundle_fr_FR.properties
+++ b/core/src/main/resources/io/doov/core/dsl/meta/i18n/DefaultResourceBundle_fr_FR.properties
@@ -24,7 +24,9 @@ minus = moins
 plus = +
 after = apr\u00e8s
 after_or_equals = apr\u00e8s ou \u00e9gal \u00e0
-age_at = \u00e2ge \u00e0
+age_at_days=\u00e2ge \u00e0 en jours
+age_at_months=\u00e2ge \u00e0 en mois
+age_at_years=\u00e2ge \u00e0 en ann\u00e9es
 before = avant
 before_or_equals = avant ou \u00e9gal \u00e0
 matches = correspond \u00e0
